k8s/users-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-service
  template:
    metadata:
      labels:
        app: users-service
    spec:
      containers:
        - name: users-service
          image: users-service
          imagePullPolicy: Never
          ports:
            - containerPort: 80
